# sadraskol-blog

./: .gitignore  .gitmodules  Cargo.toml  Migration.md  README.md  clean-backup.json  deploy  index.html  redirects  sadraskol.sql  slugs.sad
feed/: index.html  index.xml
front/: package-lock.json  package.json  spago.dhall
infra/: .gitignore  .terraform.lock.hcl  install.sh  main.tf
posts/: 5-livres-pour-changer-sa-perspective-sur-le-dev.sad  common-pattern-for-bash-auto-complete.sad  could-not-create-unique-index-how-to-solve-duplication-errors.sad  developer-s-proust-questionnaire  developer-s-proust-questionnaire.sad  digging-in-the-depth-of-fibonacci.sad  distributed-systems-a-review.sad  divers-foucault-et-intuition.sad  experimenting-pushstate-to-boost-page-loading  experimenting-pushstate-to-boost-page-loading.sad  happy-new-year-of-code  happy-new-year-of-code.sad  hors-sujet-imperatif-categorique-de-kant-et-masculinite-toxique.sad  hors-sujet-mes-vies-avec-le-cafe.sad  hors-sujet-trouver-son-cafe.sad  how-my-blog-evolved-in-5-years.sad  how-to-create-a-bash-auto-complete  how-to-create-a-bash-auto-complete.sad  how-to-make-the-best-out-of-twitter.sad  if-less-game-of-life.sad  in-favor-of-comments-what-does-empirical-engineering-says.sad  introducing-entremets.sad  kafka-n-est-pas-kafkaien  kafka-n-est-pas-kafkaien.sad  l-argument-ontologique-de-l-agilite.sad  l-ethique-liberale-et-l-esprit-de-l-agile  lara-hogan-s-resilient-management-reading-notes.sad  le-paradoxe-de-la-veille.sad  le-paradoxe-de-picasso-pourquoi-on-ne-peut-pas-faire-confiance-au-langage-naturel.sad  learning-alloy-the-hard-way.sad  les-types-algbriques-pour-les-langages-orients-objet.sad  les-types-algebriques-pour-les-langages-orientes-objet  methodes-formelles  (+70 more)
src/: fs.rs  (+11 more)
(+111 files in other folders)
