[package]
name = "sadraskol"
version = "0.1.0"
authors = ["Thomas Bracher <thomas.bracher@cpe.fr>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.15", features = ["serde"] }
serde = { version = "1.0.115", features = ["derive"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
env_logger = "0.7.1"
rand = "0.7.3"
pulldown-cmark = "0.7.2"
unidecode = "0.3.0"
toml = "0.5.6"
log = "0.4.11"
askama = "0.10.3"
image = "0.23.14"
rocket = "0.5.0-rc.1"
notify = "4.0.17"
