[package]
name = "sadraskol"
version = "0.1.0"
authors = ["Thomas Bracher <thomas.bracher@cpe.fr>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
serde = { version = "1.0.149", features = ["derive"] }
uuid = { version = "1.2.2", features = ["v4"] }
env_logger = "0.10.0"
rand = "0.8.5"
pulldown-cmark = "0.9.2"
unidecode = "0.3.0"
toml = "0.5.9"
log = "0.4.17"
askama = "0.11.1"
image = "0.24.5"
rocket = "0.5.0-rc.2"
notify = "5.0.0"
